--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -65,6 +67,12 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-beta01"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01"
+
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-common:$hilt_co_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_co_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_co_version"
 
     androidTestImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:rules:1.3.0'
