--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,8 @@
 
 buildscript {
     ext.kotlin_version = '1.4.10'
+    ext.hilt_version = '2.29.1-alpha'
+    ext.hilt_co_version = '1.0.0-alpha02'
     ext.compose_version = '1.0.0-alpha07'
 
     repositories {
@@ -26,6 +28,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0-alpha16'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
