--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_co_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_co_version"
 
+    implementation 'dev.chrisbanes.accompanist:accompanist-coil:0.3.3.1'
+
     androidTestImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
