--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.10'
+    ext.nav_version = "2.3.1"
     ext.hilt_version = '2.29.1-alpha'
     ext.hilt_co_version = '1.0.0-alpha02'
     ext.compose_version = '1.0.0-SNAPSHOT'
