--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  async: ^2.4.2
+  http: ^0.12.2
   json_annotation: ^3.1.1
   provider: ^4.3.2+2
 
