--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,9 +16,10 @@
 
 buildscript {
     ext.kotlin_version = '1.4.10'
+    ext.nav_version = "2.3.1"
     ext.hilt_version = '2.29.1-alpha'
     ext.hilt_co_version = '1.0.0-alpha02'
-    ext.compose_version = '1.0.0-alpha07'
+    ext.compose_version = '1.0.0-SNAPSHOT'
 
     repositories {
         google()
@@ -28,16 +29,20 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0-alpha16'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
-
 plugins {
     id 'com.diffplug.spotless' version '5.7.0'
 }
 
 subprojects {
     repositories {
+        maven {
+            def snapshot = "6961312"
+            url  "https://androidx.dev/snapshots/builds/$snapshot/artifacts/repository/"
+        }
         google()
         jcenter()
     }
