--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  async: ^2.4.2
+  http: ^0.12.2
+  json_annotation: ^3.1.1
   provider: ^4.3.2+2
 
   # The following adds the Cupertino Icons font to your application.
@@ -31,6 +33,9 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  build_resolvers: ^1.4.3
+  build_runner: ^1.10.6
+  json_serializable: ^3.5.0
   pedantic: ^1.9.0
   flutter_test:
     sdk: flutter
