--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlinx-serialization'
     id 'dagger.hilt.android.plugin'
+    id "com.google.protobuf" version "0.8.13"
 }
 
 android {
@@ -84,6 +85,9 @@ dependencies {
 
     implementation 'dev.chrisbanes.accompanist:accompanist-coil:0.3.3.1'
 
+    implementation "androidx.datastore:datastore:1.0.0-alpha04"
+    implementation  "androidx.datastore:datastore-core:1.0.0-alpha04"
+    implementation  "com.google.protobuf:protobuf-javalite:3.11.0"
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -96,6 +100,25 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation "androidx.ui:ui-test:$compose_version"
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.11.0"
+    }
+
+    // Generates the java Protobuf-lite code for the Protobufs in this project. See
+    // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
+    // for more information.
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option 'lite'
+                }
+            }
+        }
+    }
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
