--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,8 @@ subprojects {
         }
         google()
         jcenter()
+
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
 
     apply plugin: 'com.diffplug.spotless'
