--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   async: ^2.4.2
+  hive: ^1.4.4+1
   http: ^0.12.2
   json_annotation: ^3.1.1
   provider: ^4.3.2+2
@@ -33,9 +34,9 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
-  build_resolvers: ^1.4.3
-  build_runner: ^1.10.6
-  json_serializable: ^3.5.0
+  build_resolvers: ^1.4.4
+  build_runner: ^1.10.7
+  json_serializable: ^3.5.1
   pedantic: ^1.9.0
   flutter_test:
     sdk: flutter
