--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   async: ^2.4.2
   hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
   http: ^0.12.2
   json_annotation: ^3.1.1
   provider: ^4.3.2+2
@@ -36,6 +37,7 @@ dependencies:
 dev_dependencies:
   build_resolvers: ^1.4.4
   build_runner: ^1.10.7
+  hive_generator: ^0.8.2
   json_serializable: ^3.5.1
   pedantic: ^1.9.0
   flutter_test:
