--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,14 +68,14 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     implementation "androidx.compose.foundation:foundation-layout:$compose_version"
 
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha03"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha05"
 
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.core:core-ktx:1.5.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.5.0-beta01'
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-beta01"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
