--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,12 +15,13 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.4.20'
+    ext.kotlin_version = '1.4.21'
     ext.nav_version = "2.3.1"
-    ext.hilt_version = '2.29.1-alpha'
+    ext.hilt_version = '2.30.1-alpha'
     ext.hilt_co_version = '1.0.0-alpha02'
-    ext.compose_version = '1.0.0-alpha08'
-    ext.datastore_version = '1.0.0-alpha05'
+    ext.compose_version = '1.0.0-alpha10'
+    ext.datastore_version = '1.0.0-alpha06'
+    ext.lifecycle_version = '2.3.0-rc01'
 
     repositories {
         google()
@@ -28,7 +29,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha02'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
