--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,9 +19,9 @@ buildscript {
     ext.nav_version = "2.3.1"
     ext.hilt_version = '2.30.1-alpha'
     ext.hilt_co_version = '1.0.0-alpha03'
-    ext.compose_version = '1.0.0-alpha11'
-    ext.datastore_version = '1.0.0-alpha06'
-    ext.lifecycle_version = '2.3.0-rc01'
+    ext.compose_version = '1.0.0-beta01'
+    ext.datastore_version = '1.0.0-alpha07'
+    ext.lifecycle_version = '2.3.0'
 
     repositories {
         google()
@@ -29,7 +29,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha05'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
